// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile should render a default avatar when none is provided 1`] = `
<div
  profileLinks={
    Array [
      Object {
        "icon": <IconOutlineQuestionMark
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
    />,
        "text": "Account",
        "url": "http://localhost:8080/",
      },
      Object {
        "icon": <IconOutlineQuestionMark
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
    />,
        "text": "Notifications",
        "url": "http://localhost:8080/",
      },
    ]
  }
  userName="Test user"
/>
`;

exports[`UserProfile should render a user profile with avatar, name and popup button 1`] = `
<div
  avatar={
    <IconPerson
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  profileLinks={
    Array [
      Object {
        "icon": <IconOutlineQuestionMark
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
    />,
        "text": "Account",
        "url": "http://localhost:8080/",
      },
      Object {
        "icon": <IconOutlineQuestionMark
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
    />,
        "text": "Notifications",
        "url": "http://localhost:8080/",
      },
    ]
  }
  signoutUrl="http://localhost:8080/"
  userName="Anthony Martial"
/>
`;

exports[`UserProfile should render as a signin link when a signinUrl and no user data is provided 1`] = `
<div
  signinUrl="google.com"
/>
`;

exports[`UserProfile should render as a signout link when no user data or signinUrl is provided 1`] = `
<div
  signoutUrl="google.com"
/>
`;
